[metadata]
name = scientific_calculator
version = 0.0.1
author = Hendrik T
author_email = hendrik.gian@gmail.com
description =  SI-UKKW-SIWP2005-OOP, A simple scientific calculator package case study
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hendrikTpl/SI-UKKW-SIWP2005_OOP_2024/tree/1-feat-a-simple-pip-python-package-project
project_urls =
    Bug Tracker = https://github.com/hendrikTpl/SI-UKKW-SIWP2005_OOP_2024/tree/1-feat-a-simple-pip-python-package-project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
